Thori changes / bug fix / update

--- a/style.css
+++ b/style.css
@@ -32,3 +32,16 @@ section{
     text-align: center;
     margin: 5px;
 }
+
+
+#top-btn{
+
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    padding: 10px;
+border: none;
+background-color: black;
+color: white;
+
+}
