--- a/style.css
+++ b/style.css
@@ -45,3 +45,80 @@ background-color: black;
 color: white;
 
 }
+
+
+
+
+#picture{
+
+    height: 150px;
+    width: 150px;
+    border-radius: 100%;
+   
+position: absolute;
+top: 100px;
+right: 70px;
+background-image: url(https://www.svgrepo.com/show/506667/person.svg);
+background-size: 100% 100%;
+border: 5px solid white;
+
+
+
+}
+
+
+
+#box1{
+
+
+    height: 300px;
+    width: 300px;
+
+
+}
+
+
+
+#about-you{
+position: absolute;
+left: 85px;
+top: 120px;
+color: white;
+font-family: Arial, Helvetica, sans-serif;
+
+
+
+    
+
+
+}
+
+
+#about-us{
+
+
+    margin-top: 100px;
+    justify-content: left;
+    color: white;
+    margin-left: 10px;
+
+}
+
+
+
+
+#icons1{
+    
+    height: 300px;
+    width: 300px;
+    position: absolute;
+   
+    top: 320px;
+    color: rgb(0, 0, 0);
+
+    font-size: 30px;
+
+    
+}
+
+
